kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prometheus-demo
spec: {}
status: {}
