kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: ClusterIP  
  ports:
  - name: "hello-world"
    port: 9999
  selector:
    app: hello-world
